--- a/README
+++ b/README
@@ -1,9 +1,11 @@
-Records all kinds of my notes on github
+Records all kinds of my notes on github.
 Neil <freeordie.k@gmail.com>
-Last Update: Mon Mar 26, 2012
+
+Last Update: Tue Jul  2 10:29:11 CST 2013
 
 Currently including:
 kernel
 bitbake
+configs for vim, git and shell
 
 To be updated...
